--- a/e5248654f5e44f8e9216f3f38ed75ee8.opf/meta.yml
+++ b/e5248654f5e44f8e9216f3f38ed75ee8.opf/meta.yml
@@ -3,8 +3,8 @@ initial_creation_type: ocr
 source_metadata:
   work_id: W1PD95844
   id: bdr:W4CZ5369
-  title: བཀའ་འགྱུར ༼སྡེ་དགེ༽
-  publication: སྡེ་དགེ་པར་ཁང་།
+  title: kanjur pedurma
+  publication: ''
   author: ''
   volumes:
     c4c64b7e3a714a4ab3db3375a7c22196:
